=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.05 - IN DEVELOPMENT

=over

=item *

Fixed bug to let the a template's Log be viewed from its "View Detail"
screen. [Bodo Schulze]

=item *

Fixed a bug in L<Krang::Handler> reported by Alice Lincoln: Make sure
a manually created window gets its own id when the user types/copies a
Krang URL into it or accesses another windows URL via the History.
Thanx to Jesse Erlbaum for the referer-based solution to this problem.
Also implemented a workaround in krang.js to force IE6/7 to send the
referer when a link is passed through JavaScript. [Bodo Schulze]

=item * 

Added a server-side paste filter to L<Krang::ElementClass::PoorText>,
triggered by the onPaste event. [Bodo Schulze]


=item * 

Added linked_stories() to L<Krang::ElementClass> to make this interface
available to all element classes, especially WYSIWYG editors and the
like. [Bodo Schulze]

=item *

Made sure a media is reported as unpublished after changing its
category. [Bodo Schulze]

=item *

Added convenience method C<root_category()> to
L<Krang::Category>. [Bodo Schulze]

=item *

Integrated PoorText with StoryLink interface. [Bodo Schulze]

=item *

Added the C<ErrorNotificationEmail> configuration directive that can contain an optional
comma-separated list of email address that will be sent an email with details about
any Internal Server Errors that occur. [Michael Peters]

=item *

Added C<retire_hook> and C<unretire_hook> hooks for element classes when things are moved
in and out of the retired objects section. [Michael Peters]

=item *

Added C<untrash_hook> hook for element classes when things are taken
out of the trash. [Michael Peters]

=item *

Added the ability to change an element's class in the Element Editor
UI if the element library is configured to allow it (using the
C<ChangeableElementClasses> directive in F<set.conf>). [Michael Peters]

=item *
